Update to avalonia preview5
A lot of stuff needs fixing

--- a/WalletWasabi.Fluent/Controls/LabelsItemsPresenter.axaml
+++ b/WalletWasabi.Fluent/Controls/LabelsItemsPresenter.axaml
@@ -6,6 +6,8 @@
   <Design.PreviewWith>
     <Border BorderBrush="Black" BorderThickness="1" Width="250" Height="50">
       <c:LabelsItemsPresenter HorizontalAlignment="Left" VerticalAlignment="Center">
+        <!-- TODO: Fix LabelsItemsPresenter Items -->
+        <!--
         <c:LabelsItemsPresenter.Items>
           <g:List x:TypeArguments="x:String">
             <x:String>Label 1</x:String>
@@ -14,6 +16,7 @@
             <x:String>Label 4</x:String>
           </g:List>
         </c:LabelsItemsPresenter.Items>
+        -->
       </c:LabelsItemsPresenter>
     </Border>
   </Design.PreviewWith>
@@ -32,11 +35,14 @@
 
   <Style Selector="c|LabelsItemsPresenter">
     <Setter Property="Margin" Value="0" />
-    <Setter Property="VirtualizationMode" Value="Simple" />
+    <!-- TODO: -->
+    <!-- <Setter Property="VirtualizationMode" Value="Simple" /> -->
     <Setter Property="HorizontalAlignment" Value="Left" />
     <Setter Property="BorderBrush" Value="{DynamicResource TagsBoxBorderBrush}" />
     <Setter Property="Foreground" Value="{DynamicResource TextControlForeground}" />
     <Setter Property="MaxLabelWidth" Value="120" />
+    <!-- TODO: Fix LabelsItemsPresenter ItemTemplate -->
+    <!--
     <Setter Property="ItemTemplate">
       <DataTemplate>
         <Panel Margin="0 0 4 0">
@@ -50,9 +56,11 @@
         </Panel>
       </DataTemplate>
     </Setter>
+    -->
     <Setter Property="ItemsPanel">
       <ItemsPanelTemplate>
-        <c:LabelsPanel Orientation="Horizontal" Spacing="2"
+        <!-- TODO: Spacing="2" -->
+        <c:LabelsPanel Orientation="Horizontal"
                        HorizontalAlignment="{Binding $parent[c:LabelsItemsPresenter].HorizontalAlignment}">
           <c:LabelsPanel.EllipsisControl>
             <Panel Margin="0 0 0 0">
