--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
@@ -81,7 +81,8 @@
                      Label="Labels"
                      TextValue="{Binding Labels}">
         <c:PrivacyContentControl VerticalContentAlignment="Center">
-          <c:LabelsItemsPresenter Items="{Binding Labels}" />
+          <!-- TODO: Items="{Binding Labels}" -->
+          <c:LabelsItemsPresenter />
         </c:PrivacyContentControl>
       </c:PreviewItem>
     </StackPanel>
