--- a/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
@@ -35,7 +35,8 @@
           </c:PrivacyContentControl>
         </DockPanel>
         <c:PrivacyContentControl PrivacyReplacementMode="Text" HorizontalAlignment="Center">
-          <c:LabelsItemsPresenter Items="{Binding Labels}" />
+          <!-- TODO:  Items="{Binding Labels}" -->
+          <c:LabelsItemsPresenter />
         </c:PrivacyContentControl>
       </StackPanel>
 
