--- a/WalletWasabi.Fluent/Views/Wallets/Send/TransactionPreviewView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/TransactionPreviewView.axaml
@@ -156,7 +156,8 @@
         </StackPanel>
       </DockPanel>
     </c:ContentArea.Title>
-    <Carousel Items="{Binding TransactionSummaries}" IsVirtualized="False"
+    <!-- TODO: IsVirtualized="False" -->
+    <Carousel Items="{Binding TransactionSummaries}"
               SelectedItem="{Binding DisplayedTransactionSummary}">
       <Carousel.PageTransition>
         <CrossFade Duration="0.75" />
