--- a/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Receive/ReceiveAddressView.axaml
@@ -35,8 +35,7 @@
           </c:PrivacyContentControl>
         </DockPanel>
         <c:PrivacyContentControl PrivacyReplacementMode="Text" HorizontalAlignment="Center">
-          <!-- TODO:  Items="{Binding Labels}" -->
-          <c:LabelsItemsPresenter />
+          <c:LabelsItemsPresenter  Items="{Binding Labels}" />
         </c:PrivacyContentControl>
       </StackPanel>
 
