--- a/WalletWasabi.Fluent/Views/Dialogs/ConfirmHideAddressView.axaml
+++ b/WalletWasabi.Fluent/Views/Dialogs/ConfirmHideAddressView.axaml
@@ -20,8 +20,7 @@
       </c:QuestionControl.IconContent>
       <StackPanel Spacing="10">
         <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Do you wish to hide the address with the following labels?" />
-        <!-- TODO: Items="{Binding Label}" -->
-        <c:LabelsItemsPresenter HorizontalAlignment="Center"  />
+        <c:LabelsItemsPresenter Items="{Binding Label}" HorizontalAlignment="Center"  />
         <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="This can not be undone." />
       </StackPanel>
     </c:QuestionControl>
