Revert "Navbar refactoring part 2"
This reverts commit 65f598f7

--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -9,12 +9,15 @@
              xmlns:vmw="using:WalletWasabi.Fluent.ViewModels.Wallets"
              xmlns:behaviors="clr-namespace:WalletWasabi.Fluent.Behaviors"
              xmlns:extensions="clr-namespace:WalletWasabi.Fluent.Extensions"
-             xmlns:navigation="clr-namespace:WalletWasabi.Fluent.ViewModels.Navigation"
              x:DataType="vm:NavBarViewModel"
              x:CompileBindings="True"
              mc:Ignorable="d" d:DesignWidth="280" d:DesignHeight="459"
              x:Class="WalletWasabi.Fluent.Views.NavBar.NavBar" UseLayoutRounding="False"
              Name="NavBarUserControl">
+
+  <i:Interaction.Behaviors>
+    <behaviors:NavBarSelectedIndicatorParentBehavior />
+  </i:Interaction.Behaviors>
   <UserControl.Resources>
     <ControlTheme x:Key="NavBarListBoxItemTheme" TargetType="ListBoxItem"
                   BasedOn="{StaticResource {x:Type ListBoxItem}}">
@@ -72,11 +75,14 @@
         <Setter Property="Background" Value="{DynamicResource NavBarAccentColor}" />
       </Style>
     </ControlTheme>
+
+
   </UserControl.Resources>
   <UserControl.Styles>
+
     <Style Selector="Panel.navBarItemPanel LayoutTransformControl">
-      <Setter Property="LayoutTransform" Value="scaleY(1)" />
-      <Setter Property="Opacity" Value="1" />
+      <Setter Property="LayoutTransform" Value="scaleY(0)" />
+      <Setter Property="Opacity" Value="0" />
       <Setter Property="Transitions">
         <Transitions>
           <TransformOperationsTransition Property="LayoutTransform" Duration="0:0:0.175" />
@@ -85,12 +91,13 @@
       </Setter>
     </Style>
 
+
     <Style Selector="ListBoxItem:selected Panel.navBarItemPanel LayoutTransformControl">
-      <Setter Property="LayoutTransform" Value="scaleY(0)" />
-      <Setter Property="Opacity" Value="0" />
+      <Setter Property="LayoutTransform" Value="scaleY(1)" />
+      <Setter Property="Opacity" Value="1" />
     </Style>
 
-    <Style Selector="Panel.navBarItemPanel PathIcon" x:DataType="navigation:RoutableViewModel">
+    <Style Selector="  Panel.navBarItemPanel PathIcon" x:DataType="vm:NavBarItemViewModel">
       <Setter Property="Width" Value="24" />
       <Setter Property="Height" Value="24" />
       <Setter Property="VerticalAlignment" Value="Center" />
@@ -99,7 +106,7 @@
       <Setter Property="Data" Value="{Binding IconName, Converter={x:Static conv:NavBarIconConverter.Instance}}" />
     </Style>
 
-    <Style Selector="ListBoxItem:selected Panel.navBarItemPanel PathIcon" x:DataType="navigation:RoutableViewModel">
+    <Style Selector="ListBoxItem:selected Panel.navBarItemPanel PathIcon" x:DataType="vm:NavBarItemViewModel">
       <Setter Property="Data" Value="{Binding IconNameFocused, Converter={x:Static conv:NavBarIconConverter.Instance}}" />
     </Style>
 
@@ -108,7 +115,7 @@
       <Setter Property="FontSize" Value="{StaticResource FontSizeH9}" />
     </Style>
 
-    <Style Selector="Panel.navBarItemPanel">
+    <Style Selector="Panel.navBarItemPanel" x:DataType="vm:NavBarItemViewModel">
       <Setter Property="Width" Value="75" />
       <Setter Property="Height" Value="58" />
       <Setter Property="Cursor" Value="Hand" />
@@ -120,6 +127,7 @@
       <Setter Property="Margin" Value="{DynamicResource MenuFlyoutSeparatorThemePadding}" />
       <Setter Property="Height" Value="{DynamicResource MenuFlyoutSeparatorThemeHeight}" />
     </Style>
+
 
     <Style Selector="Panel.navBarItemPanel StackPanel">
       <Setter Property="VerticalAlignment" Value="Center" />
@@ -158,6 +166,7 @@
     <Style Selector="Panel.navBarItemPanel Ellipse.isLoggedIn.isCoinjoining">
       <Setter Property="Fill" Value="{DynamicResource CoinjoinActiveColor}" />
     </Style>
+
   </UserControl.Styles>
 
   <DockPanel>
@@ -186,18 +195,14 @@
     <Separator DockPanel.Dock="Bottom" />
 
     <!-- Wallet List -->
-    <!-- TODO: VirtualizationMode="None" -->
-    <ListBox Items="{Binding Wallets}"
-             Background="Transparent"
-             SelectedItem="{Binding SelectedWallet}"
-             extensions:SelectingItemsControlExtension.EnableSelectionAnimation="True"
-             ItemContainerTheme="{StaticResource NavBarListBoxItemTheme}">
-      <Interaction.Behaviors>
-        <behaviors:NavBarWalletListBoxBehavior/>
-      </Interaction.Behaviors>
+    <ListBox Items="{Binding Wallets}" Background="Transparent"
+             SelectedItem="{Binding SelectedWallet}" extensions:SelectingItemsControlExtension.EnableSelectionAnimation="True"
+             ItemContainerTheme="{StaticResource NavBarListBoxItemTheme}"
+             VirtualizationMode="None">
       <ListBox.ItemTemplate>
         <DataTemplate DataType="vmw:WalletViewModelBase">
-          <Panel Classes="navBarItemPanel">
+
+          <Panel  Classes="navBarItemPanel">
             <Ellipse Classes.isLoading="{Binding IsLoading}"
                      Classes.isLoggedIn="{Binding IsLoggedIn}"
                      Classes.isCoinjoining="{Binding IsCoinJoining}" />
