--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -8,7 +8,6 @@
              xmlns:vm="using:WalletWasabi.Fluent.ViewModels.NavBar"
              xmlns:vmw="using:WalletWasabi.Fluent.ViewModels.Wallets"
              xmlns:behaviors="clr-namespace:WalletWasabi.Fluent.Behaviors"
-             xmlns:extensions="clr-namespace:WalletWasabi.Fluent.Extensions"
              x:DataType="vm:NavBarViewModel"
              x:CompileBindings="True"
              mc:Ignorable="d" d:DesignWidth="280" d:DesignHeight="459"
@@ -18,108 +17,7 @@
   <i:Interaction.Behaviors>
     <behaviors:NavBarSelectedIndicatorParentBehavior />
   </i:Interaction.Behaviors>
-  <UserControl.Resources>
-    <ControlTheme x:Key="NavBarListBoxItemTheme" TargetType="ListBoxItem"
-                  BasedOn="{StaticResource {x:Type ListBoxItem}}">
-      <Setter Property="CornerRadius" Value="{DynamicResource OverlayCornerRadius}" />
-      <Setter Property="BorderBrush" Value="{DynamicResource ButtonBorderBrush}" />
-      <Setter Property="ClipToBounds" Value="False" />
-      <Setter Property="Margin" Value="2,1" />
-      <Setter Property="Padding" Value="0" />
-      <Setter Property="Template">
-        <ControlTemplate>
-
-          <Panel Margin="{TemplateBinding Margin}">
-            <Border
-              Width="4"
-              ZIndex="1"
-              Height="24"
-              Name="PART_SelectionIndicator"
-              ClipToBounds="False"
-              VerticalAlignment="Center"
-              HorizontalAlignment="Left" />
-            <ContentPresenter Name="PART_ContentPresenter"
-                              ZIndex="0"
-                              BorderBrush="{TemplateBinding BorderBrush}"
-                              CornerRadius="{TemplateBinding CornerRadius}"
-                              ContentTemplate="{TemplateBinding ContentTemplate}"
-                              Content="{TemplateBinding Content}"
-                              FontWeight="Normal"
-                              FontSize="{DynamicResource ControlContentThemeFontSize}"
-                              Padding="{TemplateBinding Padding}"
-                              VerticalContentAlignment="Center"
-                              HorizontalContentAlignment="Center" />
-          </Panel>
-        </ControlTemplate>
-      </Setter>
-
-      <Style Selector="^:nth-child(1)">
-        <Setter Property="Margin" Value="2,0,2,1" />
-      </Style>
-
-      <Style Selector="^:selected /template/ ContentPresenter#PART_ContentPresenter">
-        <Setter Property="Background" Value="{DynamicResource NavBarItemSelectedBrush}" />
-      </Style>
-
-      <Style Selector="^ /template/ ContentPresenter#PART_ContentPresenter">
-        <Setter Property="Background" Value="Transparent" />
-        <Setter Property="BorderThickness" Value="0" />
-      </Style>
-
-      <Style Selector="^:selected /template/ Border#PART_SelectionIndicator">
-        <Setter Property="Opacity" Value="1" />
-      </Style>
-
-      <Style Selector="^ /template/ Border#PART_SelectionIndicator">
-        <Setter Property="Opacity" Value="0" />
-        <Setter Property="Background" Value="{DynamicResource NavBarAccentColor}" />
-      </Style>
-    </ControlTheme>
-
-
-  </UserControl.Resources>
   <UserControl.Styles>
-
-    <Style Selector="Panel.navBarItemPanel LayoutTransformControl">
-      <Setter Property="LayoutTransform" Value="scaleY(0)" />
-      <Setter Property="Opacity" Value="0" />
-      <Setter Property="Transitions">
-        <Transitions>
-          <TransformOperationsTransition Property="LayoutTransform" Duration="0:0:0.175" />
-          <DoubleTransition Property="Opacity" Duration="0:0:0.175" Easing="1,0,1,0" />
-        </Transitions>
-      </Setter>
-    </Style>
-
-
-    <Style Selector="ListBoxItem:selected Panel.navBarItemPanel LayoutTransformControl">
-      <Setter Property="LayoutTransform" Value="scaleY(1)" />
-      <Setter Property="Opacity" Value="1" />
-    </Style>
-
-    <Style Selector="  Panel.navBarItemPanel PathIcon" x:DataType="vm:NavBarItemViewModel">
-      <Setter Property="Width" Value="24" />
-      <Setter Property="Height" Value="24" />
-      <Setter Property="VerticalAlignment" Value="Center" />
-      <Setter Property="HorizontalAlignment" Value="Center" />
-      <Setter Property="Foreground" Value="{DynamicResource AcrylicTrimForeground}" />
-      <Setter Property="Data" Value="{Binding IconName, Converter={x:Static conv:NavBarIconConverter.Instance}}" />
-    </Style>
-
-    <Style Selector="ListBoxItem:selected Panel.navBarItemPanel PathIcon" x:DataType="vm:NavBarItemViewModel">
-      <Setter Property="Data" Value="{Binding IconNameFocused, Converter={x:Static conv:NavBarIconConverter.Instance}}" />
-    </Style>
-
-    <Style Selector="Panel.navBarItemPanel TextBlock">
-      <Setter Property="TextAlignment" Value="Center" />
-      <Setter Property="FontSize" Value="{StaticResource FontSizeH9}" />
-    </Style>
-
-    <Style Selector="Panel.navBarItemPanel" x:DataType="vm:NavBarItemViewModel">
-      <Setter Property="Width" Value="75" />
-      <Setter Property="Height" Value="58" />
-      <Setter Property="Cursor" Value="Hand" />
-    </Style>
 
     <Style Selector="Separator">
       <Setter Property="Background" Value="{DynamicResource AcrylicTrimForeground}" />
@@ -128,13 +26,57 @@
       <Setter Property="Height" Value="{DynamicResource MenuFlyoutSeparatorThemeHeight}" />
     </Style>
 
+    <Style Selector="c|NavBarItem" x:DataType="vm:NavBarItemViewModel">
+      <Setter Property="Width" Value="75" />
+      <Setter Property="Height" Value="58" />
+      <Setter Property="Margin" Value="4 1" />
+      <Setter Property="Padding" Value="0" />
+      <Setter Property="Cursor" Value="Hand" />
+      <Setter Property="IsSelectable" Value="{Binding IsSelectable}" />
+      <Setter Property="IsSelected" Value="{Binding IsSelected}" />
+      <Setter Property="Command" Value="{Binding OpenCommand}" />
+    </Style>
 
-    <Style Selector="Panel.navBarItemPanel StackPanel">
+    <Style Selector="c|NavBarItem StackPanel">
       <Setter Property="VerticalAlignment" Value="Center" />
       <Setter Property="Spacing" Value="2" />
     </Style>
 
-    <Style Selector="Panel.navBarItemPanel Ellipse">
+    <Style Selector="c|NavBarItem StackPanel TextBlock">
+      <Setter Property="TextAlignment" Value="Center" />
+      <Setter Property="FontSize" Value="{StaticResource FontSizeH9}" />
+    </Style>
+
+    <Style Selector="c|NavBarItem StackPanel PathIcon" x:CompileBindings="False">
+      <Setter Property="Width" Value="24" />
+      <Setter Property="Height" Value="24" />
+      <Setter Property="VerticalAlignment" Value="Center" />
+      <Setter Property="HorizontalAlignment" Value="Center" />
+      <Setter Property="Foreground" Value="{DynamicResource AcrylicTrimForeground}" />
+      <Setter Property="Data" Value="{Binding IconName, Converter={x:Static conv:NavBarIconConverter.Instance}}" />
+    </Style>
+
+    <Style Selector="c|NavBarItem StackPanel LayoutTransformControl">
+      <Setter Property="LayoutTransform" Value="scaleY(1)" />
+      <Setter Property="Opacity" Value="1" />
+      <Setter Property="Transitions">
+        <Transitions>
+          <TransformOperationsTransition Property="LayoutTransform" Duration="0:0:0.175" />
+          <DoubleTransition Property="Opacity" Duration="0:0:0.175" Easing="1,0,1,0" />
+        </Transitions>
+      </Setter>
+    </Style>
+
+    <Style Selector="c|NavBarItem:selected StackPanel LayoutTransformControl">
+      <Setter Property="LayoutTransform" Value="scaleY(0)" />
+      <Setter Property="Opacity" Value="0" />
+    </Style>
+
+    <Style Selector="c|NavBarItem:selected PathIcon" x:CompileBindings="False">
+      <Setter Property="Data" Value="{Binding IconNameFocused, Converter={x:Static conv:NavBarIconConverter.Instance}}" />
+    </Style>
+
+    <Style Selector="c|NavBarItem Ellipse">
       <Setter Property="Fill" Value="{DynamicResource AcrylicTrimForeground}" />
       <Setter Property="Width" Value="8" />
       <Setter Property="Height" Value="8" />
@@ -149,11 +91,11 @@
       </Setter>
     </Style>
 
-    <Style Selector="Panel.navBarItemPanel Ellipse:not(.isLoading).isLoggedIn">
+    <Style Selector="c|NavBarItem Ellipse:not(.isLoading).isLoggedIn">
       <Setter Property="Opacity" Value="1" />
     </Style>
 
-    <Style Selector="Panel.navBarItemPanel Ellipse.isLoading.isLoggedIn">
+    <Style Selector="c|NavBarItem Ellipse.isLoading.isLoggedIn">
       <Style.Animations>
         <Animation IterationCount="Infinite" Duration="0:0:1">
           <KeyFrame Cue="50%">
@@ -163,59 +105,61 @@
       </Style.Animations>
     </Style>
 
-    <Style Selector="Panel.navBarItemPanel Ellipse.isLoggedIn.isCoinjoining">
+    <Style Selector="c|NavBarItem Ellipse.isLoggedIn.isCoinjoining">
       <Setter Property="Fill" Value="{DynamicResource CoinjoinActiveColor}" />
     </Style>
 
   </UserControl.Styles>
 
-  <DockPanel>
+  <DockPanel Margin="0 0 0 5">
 
     <!-- Bottom items -->
-    <!-- <ItemsControl Items="{Binding BottomItems}" -->
-    <!--               DockPanel.Dock="Bottom"> -->
-    <!--   <ItemsControl.ItemsPanel> -->
-    <!--     <ItemsPanelTemplate> -->
-    <!--       <ReversibleStackPanel ReverseOrder="True" /> -->
-    <!--     </ItemsPanelTemplate> -->
-    <!--   </ItemsControl.ItemsPanel> -->
-    <!--   <ItemsControl.DataTemplates> -->
-    <!--     <DataTemplate DataType="vm:NavBarItemViewModel"> -->
-    <!--       <StackPanel> -->
-    <!--         <PathIcon Classes="new size24" /> -->
-    <!--         <LayoutTransformControl> -->
-    <!--           <TextBlock Text="{Binding Title}" /> -->
-    <!--         </LayoutTransformControl> -->
-    <!--       </StackPanel> -->
-    <!--     </DataTemplate> -->
-    <!--   </ItemsControl.DataTemplates> -->
-    <!-- </ItemsControl> -->
-
-    <!-- Separator -->
-    <Separator DockPanel.Dock="Bottom" />
-
-    <!-- Wallet List -->
-    <ListBox Items="{Binding Wallets}" Background="Transparent"
-             SelectedItem="{Binding SelectedWallet}" extensions:SelectingItemsControlExtension.EnableSelectionAnimation="True"
-             ItemContainerTheme="{StaticResource NavBarListBoxItemTheme}"
-             VirtualizationMode="None">
-      <ListBox.ItemTemplate>
-        <DataTemplate DataType="vmw:WalletViewModelBase">
-
-          <Panel  Classes="navBarItemPanel">
-            <Ellipse Classes.isLoading="{Binding IsLoading}"
-                     Classes.isLoggedIn="{Binding IsLoggedIn}"
-                     Classes.isCoinjoining="{Binding IsCoinJoining}" />
+    <ItemsControl Items="{Binding BottomItems}"
+                  DockPanel.Dock="Bottom">
+      <ItemsControl.ItemsPanel>
+        <ItemsPanelTemplate>
+          <ReversibleStackPanel ReverseOrder="True" />
+        </ItemsPanelTemplate>
+      </ItemsControl.ItemsPanel>
+      <ItemsControl.DataTemplates>
+        <DataTemplate DataType="vm:NavBarItemViewModel">
+          <c:NavBarItem>
             <StackPanel>
               <PathIcon Classes="new size24" />
               <LayoutTransformControl>
                 <c:FadeOutTextBlock Text="{Binding Title}" />
               </LayoutTransformControl>
             </StackPanel>
-          </Panel>
+          </c:NavBarItem>
         </DataTemplate>
-      </ListBox.ItemTemplate>
-    </ListBox>
+      </ItemsControl.DataTemplates>
+    </ItemsControl>
+
+    <!-- Separator -->
+    <Separator DockPanel.Dock="Bottom" />
+
+    <!-- Wallet List -->
+    <ScrollViewer>
+      <ItemsControl Items="{Binding Wallets}">
+        <ItemsControl.DataTemplates>
+          <DataTemplate DataType="vmw:WalletViewModelBase">
+            <c:NavBarItem ToolTip.Tip="{Binding Title}">
+              <Panel>
+                <Ellipse Classes.isLoading="{Binding IsLoading}"
+                         Classes.isLoggedIn="{Binding IsLoggedIn}"
+                         Classes.isCoinjoining="{Binding IsCoinJoining}" />
+                <StackPanel>
+                  <PathIcon Classes="new size24" />
+                  <LayoutTransformControl>
+                    <c:FadeOutTextBlock Text="{Binding Title}" />
+                  </LayoutTransformControl>
+                </StackPanel>
+              </Panel>
+            </c:NavBarItem>
+          </DataTemplate>
+        </ItemsControl.DataTemplates>
+      </ItemsControl>
+    </ScrollViewer>
 
   </DockPanel>
 </UserControl>
