--- a/WalletWasabi.Fluent/Views/Login/LoginView.axaml
+++ b/WalletWasabi.Fluent/Views/Login/LoginView.axaml
@@ -89,7 +89,7 @@
       </StackPanel>
 
       <!-- Icon -->
-      <Viewbox MaxHeight="200">
+      <Viewbox MaxHeight="180" Margin="0 0 0 20">
         <Image Source="{Binding WalletType, Converter={x:Static conv:WalletIconConverter.WalletTypeToImage}}" />
       </Viewbox>
     </DockPanel>
