--- a/WalletWasabi.Fluent/App.axaml
+++ b/WalletWasabi.Fluent/App.axaml
@@ -20,6 +20,9 @@
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
         <MergeResourceInclude Source="avares://WalletWasabi.Fluent/Styles/Themes/ThemeVariants.axaml" />
+
+        <MergeResourceInclude Source="avares://WalletWasabi.Fluent/Controls/AdorningContentControl.axaml" />
+
       </ResourceDictionary.MergedDictionaries>
       <x:Double x:Key="ToggleSwitchThemeMinWidth">0</x:Double>
       <converters:BoolStringConverter x:Key="ShowHideBoolConverter" True="Hide" False="Show" />
@@ -48,7 +51,7 @@
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/QuestionControl.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/PreviewItem.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/PrivacyBar.axaml" />
-    <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/AdorningContentControl.axaml" />
+    <!-- <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/AdorningContentControl.axaml" /> -->
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/TileControl.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/StatusItem.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/PrivacyContentControl.axaml" />
