--- a/WalletWasabi.Fluent/App.axaml
+++ b/WalletWasabi.Fluent/App.axaml
@@ -21,6 +21,7 @@
       <ResourceDictionary.MergedDictionaries>
         <MergeResourceInclude Source="avares://WalletWasabi.Fluent/Styles/Themes/ThemeVariants.axaml" />
 
+        <MergeResourceInclude Source="avares://WalletWasabi.Fluent/Controls/ContentArea.axaml" />
         <MergeResourceInclude Source="avares://WalletWasabi.Fluent/Controls/AdorningContentControl.axaml" />
 
       </ResourceDictionary.MergedDictionaries>
@@ -36,10 +37,10 @@
     <StyleInclude Source="avares://Avalonia.Controls.TreeDataGrid/Themes/Fluent.axaml" />
     <StyleInclude Source="avares://Avalonia.Xaml.Interactions.Draggable/Styles.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/Themes/Base.axaml" />
-
     <StyleInclude Source="avares://WalletWasabi.Fluent/Icons/Icons.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/Styles.axaml" />
-    <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/ContentArea.axaml" />
+    <!-- <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/ContentArea.axaml" /> -->
+    <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/ContentArea.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/InfoMessage.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/Dialog.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/ProgressRingArc.axaml" />
