--- a/WalletWasabi.Fluent/CrashReport/CrashReportApp.axaml
+++ b/WalletWasabi.Fluent/CrashReport/CrashReportApp.axaml
@@ -12,6 +12,7 @@
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
         <MergeResourceInclude Source="avares://WalletWasabi.Fluent/Styles/Themes/ThemeVariants.axaml" />
+        <MergeResourceInclude Source="avares://WalletWasabi.Fluent/Controls/ContentArea.axaml" />
       </ResourceDictionary.MergedDictionaries>
     </ResourceDictionary>
   </Application.Resources>
@@ -25,7 +26,8 @@
 
     <StyleInclude Source="avares://WalletWasabi.Fluent/Icons/Icons.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/Styles.axaml" />
-    <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/ContentArea.axaml" />
+    <!-- <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/ContentArea.axaml" /> -->
+    <StyleInclude Source="avares://WalletWasabi.Fluent/Styles/ContentArea.axaml" />
     <StyleInclude Source="avares://WalletWasabi.Fluent/Controls/InfoMessage.axaml" />
   </Application.Styles>
 </Application>
